Deploying apps/Deploying secure_microservices/load-test.yaml
apiVersion: v1
kind: Pod
metadata:
  name: load-test
spec:
  containers:
  - name: load-test
    image: busybox
    command: ['sh', '-c', 'while true; do wget -q -O- http://productpage:9080/productpage; sleep 1; done']
  restartPolicy: Never
